--- a/values.yaml
+++ b/values.yaml
@@ -5,14 +5,23 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: cthulhoo/ttrss-fpm-pgsql-static
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+self_url_path: "http://localhost/tt-rss/"
+
+persistence:
+  enabled: true
+  # storageClass: "-"
+  # existingClaim: "ClaimName"
+  accessMode: ReadWriteOnce
+  size: 8Gi
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -22,6 +31,17 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+
+postgresql:
+  postgresqlPassword: "adminpassword"
+  postgresqlDatabase: "ttrss"
+  ## Enable persistence using Persistent Volume Claims
+  ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+  ##
+  persistence:
+    enabled: true
+    accessMode: ReadWriteOnce
+    size: 8Gi
 
 podAnnotations: {}
 
